Run extended pkgdep tests only for Fedora 43
With limited resources from Github run extended
pkgdep.sh tests only for Fedora 43, as Fedora is
the main driver for CI.

Signed-off-by: Karol Latecki <karol.latecki@nutanix.com>

--- a/.github/workflows/spdk-common-tests.yml
+++ b/.github/workflows/spdk-common-tests.yml
@@ -109,6 +109,8 @@ jobs:
         - os: ubuntu-22.04-arm
           distro: ""   # no container for this one
     runs-on: ${{ matrix.os || 'ubuntu-latest' }}
+    env:
+      DISTRO: ${{ matrix.distro }}
     container: ${{ matrix.distro != '' && matrix.distro || null }}
     steps:
     - uses: actions/download-artifact@v4.1.8
@@ -126,7 +128,11 @@ jobs:
         set -x
         tar xzf spdk.tar.gz --strip 1
         # TODO: consider 'autorun.sh' or 'autobuild.sh' or 'autotest.sh'
-        ./test/common/config/autotest_setup.sh --install-deps
+        if [[ $DISTRO =~ "fedora:43" ]]; then
+          ./test/common/config/autotest_setup.sh --install-deps
+        else
+          ./scripts/pkgdep.sh --all
+        fi
         ./configure --enable-coverage \
             --without-uring \
             --without-fio \
