build_qcow2: add Fedora 43 as new build option
Starting somewhere around spdk/spdk 3b7b4a96a
(v26.01-pre-396-g3b7b4a96a) it is possible to build
qcow2 images and successfully run tests using Fedora 43,
so add it as a new choice in build_qcow2 workflow.

Workflows executing tests will be updated separately
once new F43 images are built and available in spdk/spdk-ci.
Finally, the "default" value for building the images
will be changed once F40 is no longer used by any of
the workflows.

Signed-off-by: Karol Latecki <karol.latecki@nutanix.com>

--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -44,6 +44,7 @@ on:
         type: choice
         options:
         - fedora_40
+        - fedora_43
         - freebsd_14
         default: 'fedora_40'
 
