--- a/.github/workflows/build_qcow2.yml
+++ b/.github/workflows/build_qcow2.yml
@@ -39,6 +39,7 @@ on:
         type: choice
         options:
         - fedora_40
+        - fedora_43
         - freebsd_14
         default: 'fedora_40'
   push:
