Force pkgdep installation tests on workflow_dispatch
Use inputs boolean variable to enable running pkgdep
job even is commit message does not contain "pkgdep"
files. Useful for testing with gh act or in PRs.

Signed-off-by: Karol Latecki <karol.latecki@nutanix.com>

--- a/.github/workflows/spdk-common-tests.yml
+++ b/.github/workflows/spdk-common-tests.yml
@@ -12,6 +12,11 @@ on:
         required: false
         type: string
         default: ''
+      force_pkgdep:
+        description: 'Force pkgdep test phase to run'
+        required: true
+        type: boolean
+        default: false
   workflow_call:
     inputs:
       client_payload:
@@ -82,7 +87,10 @@ jobs:
       artifact_id: ${{ steps.get_artifact_id.outputs.artifact_id }}
 
   pkgdep:
-    if: contains(inputs.changed_files, 'pkgdep') || contains(inputs.changed_files, 'autotest_setup.sh')
+    if: |
+      contains(inputs.changed_files, 'pkgdep') ||
+      contains(inputs.changed_files, 'autotest_setup.sh') ||
+      inputs.force_pkgdep == true
     needs:
     - checkout_spdk
     strategy:
