Limit the scope of pkgdep tests
By default autotest_setup.sh installs all "--test-conf"
dependencies available in pkgdep/git. Narrow down the
selection and remove:

* drivers and modules - for one these are severely outdated
  and will not build on Fedora 43 (which currently runs
  extended pkgdep tests). Secondly, these require kernel-devel
  packages to be installed, and because we run in container it's
  not possible to get a package match (unless we get them from host).
  Finally, we no longer need these drivers in GHA free-tier CI,
  and will remove them from pkgdep/git soon.
* vagrant - remnant of previous CI, not needed and probably to
  be removed. Also installing vagrant with libvirt plugin is a
  nightmare on Fedora.

Signed-off-by: Karol Latecki <karol.latecki@nutanix.com>

--- a/.github/workflows/spdk-common-tests.yml
+++ b/.github/workflows/spdk-common-tests.yml
@@ -137,7 +137,8 @@ jobs:
         tar xzf spdk.tar.gz --strip 1
         # TODO: consider 'autorun.sh' or 'autobuild.sh' or 'autotest.sh'
         if [[ $DISTRO =~ "fedora:43" ]]; then
-          ./test/common/config/autotest_setup.sh --install-deps
+          ./test/common/config/autotest_setup.sh --install-deps \
+            --test-conf="fio,flamegraph,qemu,libiscsi,nvmecli,spdk,refspdk,lcov,bpftrace,doxygen"
         else
           ${{ matrix.distro == '' && 'sudo' || '' }} ./scripts/pkgdep.sh --all
         fi
