pkgdep: add azurelinux docker to test matrix
Signed-off-by: Boris Glimcher <Boris.Glimcher@emc.com>

--- a/.github/workflows/spdk-common-tests.yml
+++ b/.github/workflows/spdk-common-tests.yml
@@ -110,7 +110,7 @@ jobs:
         - docker.io/library/debian:11.11
         - docker.io/opensuse/leap:15.6
         # - docker.io/opensuse/leap:16.0
-        # - mcr.microsoft.com/azurelinux/base/core:3.0
+        - mcr.microsoft.com/azurelinux/base/core:3.0
         # - docker.io/library/archlinux:base-20250907.0.417472
         include:
         # TODO: consider also [macos-latest, windows-2022]
@@ -128,6 +128,8 @@ jobs:
       run: apt-get update
     - if: matrix.distro == 'docker.io/opensuse/leap:15.6'
       run: zypper install -y tar gzip
+    - if: matrix.distro == 'mcr.microsoft.com/azurelinux/base/core:3.0'
+      run: tdnf --noplugins install -y tar
     - shell: bash
       env:
         TZ: Etc/UTC
