Enable vfio-user tests
This reverts commit 57aa464b8b624a2b61da5d59ffcd9e01398a65f2 and
enables vfio-user tests in common tests phase.

--- a/.github/workflows/spdk-common-tests.yml
+++ b/.github/workflows/spdk-common-tests.yml
@@ -173,6 +173,7 @@ jobs:
         - {name: iscsi-vm-autotest, container_image: ghcr.io/refenv/cijoe-docker:v0.9.54, cijoe_config_prefix: qemuhost-with-guest}
         - {name: iscsi-uring-vm-autotest, container_image: ghcr.io/refenv/cijoe-docker:v0.9.54, cijoe_config_prefix: qemuhost-with-guest}
         - {name: short-fuzz-vm-autotest, container_image: ghcr.io/refenv/cijoe-docker:v0.9.54, cijoe_config_prefix: qemuhost-with-guest}
+        - {name: vfio-user-container-autotest, container_image: ghcr.io/spdk/spdk-ci:fedora_43, cijoe_config_prefix: container}
         - {name: check-format-container-autotest, container_image: ghcr.io/spdk/spdk-ci:fedora_43, cijoe_config_prefix: container}
         - {name: unittest-gcc-container-autotest, container_image: ghcr.io/spdk/spdk-ci:fedora_43, cijoe_config_prefix: container}
         - {name: unittest-clang-container-autotest, container_image: ghcr.io/spdk/spdk-ci:fedora_43, cijoe_config_prefix: container}
