cijoe: grow partition to max size when building Qcow2 image
10G might just not be enough when building new images.
Instead of using arbitrary 10G use max possible space.

Signed-off-by: Karol Latecki <karol.latecki@nutanix.com>

--- a/cijoe/workflows/build_fedora_40_qcow2_using_qemu.yaml
+++ b/cijoe/workflows/build_fedora_40_qcow2_using_qemu.yaml
@@ -48,7 +48,7 @@ steps:
     uname -a
     df -h
     growpart /dev/vda 4 || true
-    btrfs filesystem resize 10G / || true
+    btrfs filesystem resize max / || true
     df -h
 
 - name: guest_update
