build_qcow2: pass distro variable to cijoe workflow
Pass the selected distribution name to cijoe workflow,
so that we don't have to hardcode it inside.

Signed-off-by: Karol Latecki <karol.latecki@nutanix.com>

--- a/.github/workflows/build_qcow2.yml
+++ b/.github/workflows/build_qcow2.yml
@@ -132,6 +132,8 @@ jobs:
         path: ci
 
     - name: Build
+      env:
+        DISTRO: ${{ matrix.distro }}
       run: |
         cd ci/cijoe
         cijoe \
