--- a/cijoe/workflows/build_fedora_40_qcow2_using_qemu.yaml
+++ b/cijoe/workflows/build_fedora_40_qcow2_using_qemu.yaml
@@ -29,13 +29,13 @@ steps:
 - name: diskimage_from_cloudimage
   uses: system_imaging.diskimage_from_cloudimage
   with:
-    pattern: "fedora_40-x86_64"
+    pattern: "{{ local.env.DISTRO }}-x86_64"
 
 - name: guest_initialize
   uses: qemu.guest_initialize
   with:
     guest_name: generic-bios-kvm-x86_64
-    system_image_name: fedora_40-x86_64
+    system_image_name: "{{ local.env.DISTRO }}-x86_64"
 
 - name: guest_start
   uses: qemu.guest_start
