--- a/cijoe/workflows/build_fedora_qcow2_using_qemu.yaml
+++ b/cijoe/workflows/build_fedora_qcow2_using_qemu.yaml
@@ -54,7 +54,7 @@ steps:
 - name: guest_update
   run: |
     dnf update -y
-    dnf install -y git perl-JSON-PP
+    dnf install -y git perl-JSON-PP nodejs
     dnf autoremove -y
     dnf clean all -y
 
