Fix export of artifact_id as a JSON in spdk-common-tests
The version with outer double quotes and single inner quotes
works in Github using github-hosted runners, but not locally
using "gh act". "artifact_id" was actually getting exported
as:
'artifact_id={'\''fedora_43'\'':20878294770,'\''freebsd_14'\'':20878294770}'

Gh act JSON parser complains about single quotes and escape
signs, resulting in expressions being evaluated to NIL.

Use double quote for keys in JSON, which fixes the issue for gh act.

Signed-off-by: Karol Latecki <karol.latecki@nutanix.com>

--- a/.github/workflows/spdk-common-tests.yml
+++ b/.github/workflows/spdk-common-tests.yml
@@ -82,7 +82,7 @@ jobs:
         freebsd_14=$(gh api --paginate "/repos/${{ github.repository }}/actions/artifacts?name=vm-image-freebsd_14_x86_64" -q '.artifacts |= sort_by(.updated_at)[-1] | .artifacts.workflow_run.id')
         [[ -z "${fedora_43}" ]] && echo "fedora_43 is empty" && exit 1
         [[ -z "${freebsd_14}" ]] && echo "freebsd_14 is empty" && exit 1
-        echo "artifact_id={'fedora_43':$fedora_43,'freebsd_14':$freebsd_14}" >> "$GITHUB_OUTPUT"
+        echo "artifact_id={\"fedora_43\":$fedora_43,\"freebsd_14\":$freebsd_14}" >> "$GITHUB_OUTPUT"
     outputs:
       artifact_id: ${{ steps.get_artifact_id.outputs.artifact_id }}
 
