Fix CI Joe Qemu shutdown condition
The condition was wrong resulting in shutdown being
attepmted for container-based workload in local (gh act)
environment. We want to do this only on github-hosted
runners and vm-based workloads.

Signed-off-by: Karol Latecki <karol.latecki@nutanix.com>

--- a/.github/workflows/spdk-common-tests.yml
+++ b/.github/workflows/spdk-common-tests.yml
@@ -311,7 +311,7 @@ jobs:
         --monitor
 
     - name: qemu-guest, shutdown
-      if: ${{ contains(matrix.workflow.name, 'vm') && contains(runner.labels, 'self-hosted') || env.ACT == 'true' }}
+      if: contains(matrix.workflow.name, 'vm') && contains(runner.labels,'self-hosted') && ! contains(github.actor, 'nektos/act')
       run: |
         cd ci/cijoe
         cijoe workflows/autorun.yaml guest_shutdown \
