--- a/.github/workflows/spdk-common-tests.yml
+++ b/.github/workflows/spdk-common-tests.yml
@@ -273,7 +273,7 @@ jobs:
         matrix.distro)) == ''
       with:
         name: vm-image-${{matrix.distro}}_x86_64
-        github-token: ${{ github.token }}
+        github-token: ${{ ! contains(github.actor, 'nektos/act') && github.token || '' }}
         run-id: ${{ fromJson(needs.checkout_spdk.outputs.artifact_id)[ matrix.distro ] }}
 
     - name: qemu-guest, initialize
