Add job to cancel workflow on failure
Since HPE rdma tests are quickest (only 15-20 min) if they fail,
then fail the entire workflow run, all jobs
to save some free tier runners

--- a/.github/workflows/nvmf-rdma.yml
+++ b/.github/workflows/nvmf-rdma.yml
@@ -50,3 +50,9 @@ jobs:
       with:
         path: ./output
         name: hpe-job-nvmf-rdma
+    - name: Cancel all jobs enitre workflow run if this job failed
+      if: failure()
+      env:
+        GH_TOKEN: ${{ github.token }}
+      run: |
+        gh run cancel "${GITHUB_RUN_ID}" -R "${GITHUB_REPOSITORY}"
