--- a/.github/workflows/spdk-common-tests.yml
+++ b/.github/workflows/spdk-common-tests.yml
@@ -96,7 +96,7 @@ jobs:
     strategy:
       matrix:
         # Keep latest 2 versions of each flavor here
-        distro:
+        container:
         - quay.io/centos/centos:9
         - quay.io/centos/centos:10
         - docker.io/rockylinux/rockylinux:9
@@ -115,20 +115,20 @@ jobs:
         include:
         # TODO: consider also [macos-latest, windows-2022]
         - os: ubuntu-22.04-arm
-          distro: ""   # no container for this one
+          container: ""   # no container for this one
     runs-on: ${{ matrix.os || 'ubuntu-latest' }}
     env:
-      DISTRO: ${{ matrix.distro }}
-    container: ${{ matrix.distro != '' && matrix.distro || null }}
+      DISTRO: ${{ matrix.container }}
+    container: ${{ matrix.container != '' && matrix.container || null }}
     steps:
     - uses: actions/download-artifact@v4.1.8
       with:
         name: repo-spdk
-    - if: contains(matrix.distro, 'ubuntu') || contains(matrix.distro, 'debian') || contains(matrix.os, 'ubuntu-22.04-arm')
+    - if: contains(matrix.container, 'ubuntu') || contains(matrix.container, 'debian') || contains(matrix.os, 'ubuntu-22.04-arm')
       run: ${{ matrix.distro == '' && 'sudo' || '' }} apt-get update
-    - if: matrix.distro == 'docker.io/opensuse/leap:15.6'
+    - if: matrix.container == 'docker.io/opensuse/leap:15.6'
       run: zypper install -y tar gzip
-    - if: matrix.distro == 'mcr.microsoft.com/azurelinux/base/core:3.0'
+    - if: matrix.container == 'mcr.microsoft.com/azurelinux/base/core:3.0'
       run: tdnf --noplugins install -y tar
     - shell: bash
       env:
@@ -142,7 +142,7 @@ jobs:
           ./test/common/config/autotest_setup.sh --install-deps \
             --test-conf="fio,flamegraph,qemu,libiscsi,nvmecli,spdk,refspdk,lcov,bpftrace,doxygen"
         else
-          ${{ matrix.distro == '' && 'sudo' || '' }} ./scripts/pkgdep.sh --all
+          ${{ matrix.container == '' && 'sudo' || '' }} ./scripts/pkgdep.sh --all
         fi
         ./configure --enable-coverage \
             --without-uring \
