cijoe: adjust disk.path for running the VMs
Use a dynamic value for disk.path based on a variable.
The path will be different when running the job using
Github-hosted runners and locally using "gh act".

Signed-off-by: Karol Latecki <karol.latecki@nutanix.com>

--- a/cijoe/configs/qemuhost-with-guest-fedora_43.toml
+++ b/cijoe/configs/qemuhost-with-guest-fedora_43.toml
@@ -46,7 +46,6 @@ cloud.url = "https://ftp.uni-stuttgart.de/fedora/releases/43/Cloud/x86_64/images
 cloud.path = "{{ local.env.HOME }}/system_imaging/cloud/Fedora-Cloud-Base-Generic-43-1.6.x86_64.qcow2"
 cloud.metadata_path = "{{ resources.auxiliary['system_imaging.cloudinit-linux-common-metadata'] }}"
 cloud.userdata_path = "{{ resources.auxiliary['system_imaging.cloudinit-linux-common-userdata'] }}"
-# disk.path = "{{ local.env.HOME }}/system_imaging/disk/fedora_43_x86_64.qcow2"
-disk.path = "/__w/spdk-ci/spdk-ci/fedora_43_x86_64.qcow2"
+disk.path = "{{ local.env.GITHUB_WORKSPACE }}/fedora_43_x86_64.qcow2"
 docker.name = "spdk-ci"
 docker.tag = "fedora_43"
