--- a/cijoe/configs/qemuhost-with-guest-freebsd_14.toml
+++ b/cijoe/configs/qemuhost-with-guest-freebsd_14.toml
@@ -49,7 +49,6 @@ cloud.url = "https://object-storage.public.mtl1.vexxhost.net/swift/v1/1dbafeefbd
 cloud.path = "{{ local.env.HOME }}/system_imaging/cloud/freebsd-14.2-zfs-2024-12-08.qcow2"
 cloud.metadata_path = "{{ resources.auxiliary['system_imaging.cloudinit-freebsd-metadata'] }}"
 cloud.userdata_path = "{{ resources.auxiliary['system_imaging.cloudinit-freebsd-userdata'] }}"
-# disk.path = "{{ local.env.HOME }}/system_imaging/disk/freebsd_14_x86_64.qcow2"
-disk.path = "/__w/spdk-ci/spdk-ci/freebsd_14_x86_64.qcow2"
+disk.path = "{{ local.env.GITHUB_WORKSPACE }}/freebsd_14_x86_64.qcow2"
 docker.name = "spdk-ci"
 docker.tag = "freebsd_14"
