add force_pkgdep input also when triggering a job via call

--- a/.github/workflows/spdk-common-tests.yml
+++ b/.github/workflows/spdk-common-tests.yml
@@ -27,6 +27,11 @@ on:
         required: false
         type: string
         default: ''
+      force_pkgdep:
+        description: 'Force pkgdep test phase to run'
+        required: true
+        type: boolean
+        default: false
 
 env:
   spdk_path: './spdk'
