--- a/.github/workflows/spdk-common-tests.yml
+++ b/.github/workflows/spdk-common-tests.yml
@@ -224,7 +224,7 @@ jobs:
     # cijoe - for running cijoe workflows instead of writing own manual scrits;
     #         TODO: Installation doesn't take long but we should bake it into the container image.
     - name: Install cijoe
-      if: ${{ contains(matrix.workflow.name, 'container') }}
+      if: ${{ contains(matrix.workflow.name, '-container-') }}
       run: |
         pip install cijoe==0.9.54
 
@@ -270,7 +270,7 @@ jobs:
         tar xzf spdk-abi.tar.gz --strip 1
 
     - name: Restore qcow2 image from cache
-      if: contains(matrix.workflow.name, 'vm')  || contains(matrix.workflow.name, 'vfio-user')
+      if: contains(matrix.workflow.name, '-vm-')  || contains(matrix.workflow.name, 'vfio-user')
       id: restore-qcow2
       uses: actions/cache/restore@v4
       with:
@@ -279,7 +279,7 @@ jobs:
 
     - name: Download VM Qcow2 image artifact
       uses: actions/download-artifact@v4.1.8
-      if: (contains(matrix.workflow.name, 'vm')  || contains(matrix.workflow.name, 'vfio-user')) && hashFiles(format('{0}_x86_64.qcow2',
+      if: (contains(matrix.workflow.name, '-vm-')  || contains(matrix.workflow.name, 'vfio-user')) && hashFiles(format('{0}_x86_64.qcow2',
         matrix.distro)) == ''
       with:
         name: vm-image-${{matrix.distro}}_x86_64
@@ -287,7 +287,7 @@ jobs:
         run-id: ${{ fromJson(needs.checkout_spdk.outputs.artifact_id)[ matrix.distro ] }}
 
     - name: qemu-guest, initialize
-      if: ${{ contains(matrix.workflow.name, 'vm') }}
+      if: ${{ contains(matrix.workflow.name, '-vm-') }}
       run: |
         cd ci/cijoe
         cijoe workflows/autorun.yaml guest_initialize guest_start guest_check \
@@ -321,7 +321,7 @@ jobs:
         --monitor
 
     - name: qemu-guest, shutdown
-      if: ${{ contains(matrix.workflow.name, 'vm') && contains(runner.labels, 'self-hosted') || env.ACT == 'true' }}
+      if: ${{ contains(matrix.workflow.name, '-vm-') && contains(runner.labels, 'self-hosted') || env.ACT == 'true' }}
       run: |
         cd ci/cijoe
         cijoe workflows/autorun.yaml guest_shutdown \
