Allocate hugepages before running vfio-user tests
https://github.com/spdk/spdk/issues/3823 shows memory
being too fragmented after building the binaries to
be able to reserve hugepages. Lower HUGEMEM to absolute
necessary minimum and allocate huge pages before running
autorun.sh.

This might not fix the issue fully, but maybe at least
limit the number of failures caused by it.

Signed-off-by: Karol Latecki <karol.latecki@nutanix.com>

--- a/cijoe/workflows/autorun.yaml
+++ b/cijoe/workflows/autorun.yaml
@@ -144,7 +144,7 @@ steps:
 - name: vfio-user-container-autotest
   run: |
     echo "export VM_IMAGE={{ local.env.GITHUB_WORKSPACE }}/fedora_43_x86_64.qcow2" >> /opt/configs/vfio-user-container-autotest.conf
-    sudo() { "${@:2}" ; } &&  export -f sudo && /opt/spdk/autorun.sh /opt/configs/vfio-user-container-autotest.conf
+    sudo() { "${@:2}" ; } &&  export -f sudo && source /opt/configs/vfio-user-container-autotest.conf && export HUGEMEM=${HUGEMEM} && sudo -E /opt/spdk/scripts/setup.sh && /opt/spdk/autorun.sh /opt/configs/vfio-user-container-autotest.conf
 
 - name: output_listing
   run: |
