summary: better handle job cancellation
move logic about jobs failure or success
inside the summary job.

Sometimes if cacnellation happend too late,
the summary will still run even that we stated
```
if: ${{ !cancelled() }}
```

this patch handles those rare cases and votes=0

we could skip vote at all, but I like this for now
so we can debug better for near future.

Signed-off-by: Boris Glimcher <Boris.Glimcher@emc.com>

--- a/.github/workflows/gerrit-webhook-handler.yml
+++ b/.github/workflows/gerrit-webhook-handler.yml
@@ -97,7 +97,6 @@ jobs:
     uses: ./.github/workflows/summary.yml
     with:
       client_payload: ${{ needs.patch_set_status.outputs.client_payload }}
-      result: >-
-        ${{ (needs.common.result == 'success' && (needs.hpe.result == 'success' || needs.hpe.result == 'skipped')) &&
-        'success' || 'failure' }}
+      result_common: ${{ (needs.common.result }}
+      result_hpe: ${{ (needs.hpe.result }}
     secrets: inherit
