infra: bind .ssh directory to Gerrit container
Persist Gerrit's .ssh directory to avoid issues with
missing config and known_hosts for connecting to
Github by replication plugin.

Signed-off-by: Karol Latecki <karol.latecki@nutanix.com>

--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -18,6 +18,7 @@ services:
     - ./gerrit_dir/plugins:/var/gerrit/plugins
     - ./gerrit_dir/static:/var/gerrit/static
     - ./gerrit_dir/tmp:/var/gerrit/tmp
+    - ./gerrit_dir/.ssh:/var/gerrit/.ssh
     environment:
     - CANONICAL_WEB_URL=${GERRIT_CANONICAL_WEB_URL}
     ports:
